story/RDM-1175: Up versions compatible with n2o-platform 7.0.1